--- a/views/chart.ejs
+++ b/views/chart.ejs
@@ -67,7 +67,7 @@
 
 <div class="chart_body">
   <div class="lesson">
-    <h3>各区域月收入折线图</h3>
+    <h3>各区域月纯利润折线图</h3>
     <div id="monthSale"></div>
   </div>
   <div class="lesson1">
