--- a/views/set.ejs
+++ b/views/set.ejs
@@ -40,7 +40,7 @@
                 <input type="text" name="name" placeholder="填写机器名称" required="required">
                 <input type="text" name="machineNo" placeholder="填写机器编号" required="required">
                 起始金额:
-                <input type="number" name="initialNo" placeholder="0" required="required">
+                <input type="number" name="initialNo" placeholder="0" min="0" required="required">
                 <input type="submit" value="添加">
             </form>
         </div>
