--- a/views/components/income.ejs
+++ b/views/components/income.ejs
@@ -25,7 +25,7 @@
                 text: '纯利润收入情况'
             },
             tooltip: {
-                trigger: 'axi0s1'
+                trigger: 'axis'
             },
             xAxis: {
                 data: date
